1.3
* Import/Export using new app (Edit calendar -> Import/Export button)
* Add saturation/value bar to color picker (allows black/white)
- Internal bug fixes

1.2
* New name: Offline Calendar
- Bug fixes

1.1
* Fix endless sync on Android 2.3 (Local Calendar has no sync!)
* Redesigned edit of calendars
* New color picker

1.0
* First release