@@ -1,7 +1,8 @@
 1.3
-* Import/Export using new app (Edit calendar -> Import/Export button)
+* Preparations for Import/Export (Required extra app is not released right now)
 * Add saturation/value bar to color picker (allows black/white)
-- Internal bug fixes
+* Improved design following Android Design Guidelines
+- Many internal bug fixes
 
 1.2
 * New name: Offline Calendar
